# gourei-2025

./: .dockerignore  .gitignore  Dockerfile  README.md  spec.md  students.csv
.github/workflows/: ghcr.yml  rust.yml
gourei_touban/: Cargo.toml
src/: main.rs
tests/: cli.rs
